# midi_matrix.lv2

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  PKGBUILD  README.md  VERSION  manifest.ttl.in  meson.build  midi_matrix.c  midi_matrix.edc  midi_matrix.h  midi_matrix.ttl  midi_matrix_channel_filter.c  midi_matrix_channel_filter.edc  midi_matrix_channel_filter_eo.c  midi_matrix_channel_filter_nk.c  midi_matrix_channel_filter_ui.c  midi_matrix_eo.c  midi_matrix_nk.c  midi_matrix_ui.c  midi_matrix_ui.ttl  midi_matrixplex.c  midi_matrixplex.edc  midi_matrixplex.h  midi_matrixplex.ttl  midi_matrixplex_channel.c  midi_matrixplex_channel.edc  midi_matrixplex_channel_ui.c  midi_matrixplex_ui.c  nk_patcher.h
